# libieee1284

./: AUTHORS  ChangeLog  Makefile.am  Makefile.vc6  NEWS  README  README.FreeBSD  README.MinGW  README.OpenBSD  README.Solaris  README.VC6  README.win95  README.winNT  TODO  access.h  access_io.c  access_ppdev.c  blockio.c  configure.in  debug.c  debug.h  default.c  default.h  delay.c  delay.h  detect.c  detect.h  deviceid.c  ieee1284.def  ieee1284.h  interface.c  libieee1284.pc.in  libieee1284.spec.in  libieee1284.sym  ports.c  registers.c  state.c  test.c
doc/: config-doodle  interface-bugs  interface.sgml  interface.txt  interface.xml
include/: config.h.vc6  ieee1284.h  ieee1284.h.in
solaris_io/: INSTALL  LICENSE  Makefile.in  README  iop.c  iop.conf  ioprtest.c
src/: access.h  access_io.c  access_lpt.c  access_ppdev.c  conf.c  conf.h  debug.c  debug.h  default.c  delay.c  delay.h  detect.c  detect.h  deviceid.c  ieee1284module.c  interface.c  io.h  io_95.h  par_nt.h  parport.h  ports.c  state.c
tests/: test.c
